--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "mori": "^0.3.2",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
-    "babel-core": "^6.26.3"
+    "mori": "^0.3.2",
+    "webpack": "^5.66.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
-    "@babel/preset-react": "^7.9.4"
+    "@babel/preset-react": "^7.9.4",
+    "husky": "^7.0.4",
+    "webpack-cli": "^4.9.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --config webpack.config.js",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js, jsx, ts, .tsx}": [
+      "eslint",
+      "git add"
+    ],
+    "*.js": "eslint --cache"
   },
   "keywords": [],
   "author": "",
